# tntn

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tntn/: __init__.py  __main__.py  __version__.py  tntn.py  urls.toml  util.py
