[project]
name = "tntn"
version = "23.4.0.dev0"
description = "Python wrapper library for tunneling apps"
authors = [
    {name = "dowon", email = "ks2515@naver.com"},
]
dependencies = [
    "tomli; python_version < '3.11'",
    "tqdm",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.scripts]
tntn = "tntn.__main__:main"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"


[tool.pdm.version]
source = "file"
path = "tntn/__version__.py"

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "mypy",
    "pre-commit",
    "ipykernel",
]

[tool.isort]
profile = "black"

[tool.ruff]
select = ["A", "B", "C4", "E", "F", "I001", "ISC", "N", "PIE", "PT", "RET", "SIM", "UP", "W"]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
